fixes layout shift for home animation

--- a/css/mod-home.scss
+++ b/css/mod-home.scss
@@ -1,11 +1,18 @@
 .mod-home {
 
     .home-animation-1 {
+        position: relative;
+        padding-bottom: 55%;
+
         img {
             width: 100%;
         }
 
         .animation {
+            position: absolute;
+            top: 0;
+            left: 15px;
+            right: 15px;
             background-size: cover;
             background-image: url("/wp-content/themes/bula21/img/mova_header_background.png")
         }
